Fix chat display issues and optimize UI updates
- Fix incomplete text display by implementing onAudioTranscriptDone handler
  - Added onAudioTranscriptDone to RealtimeEventHandler.Listener
  - Implemented handler in ChatRealtimeHandler to replace final transcript
  - Added updateLastRobotMessage to ChatViewModel for complete text replacement

- Fix chat bubble flickering during streaming
  - Fixed areItemsTheSame in ChatMessageDiffCallback to use UUID comparison
  - Implemented getChangePayload for text-only and function result updates
  - Added payload handling in ChatMessageAdapter for partial updates
  - Eliminates remove/add animations, enables smooth text streaming

- Fix GetWeatherTool crash on older Android versions
  - Replaced URLEncoder.encode with charset string instead of StandardCharsets

- Fix function call card updates
  - Added copyWithFunctionResult to ChatMessage for immutable updates
  - Updated updateLatestFunctionCallResult to use new copy method

- Add diagnostic logging for user transcript updates
  - Track placeholder creation and update flow
  - Log itemId matching and update success/failure